--- a/app/src/main/res/layout/install_firmware.xml
+++ b/app/src/main/res/layout/install_firmware.xml
@@ -4,7 +4,20 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="8dp">
+    >
+
+    <ProgressBar
+        style="?android:attr/progressBarStyleHorizontal"
+        android:id="@+id/install_firm_progress"
+        android:layout_width="match_parent"
+        android:progressDrawable="@drawable/progress_horizontal_holo_blue_dark"
+        android:layout_height="wrap_content"
+        android:minHeight="5dp"
+        android:minWidth="0dp"
+        android:maxHeight="5dp"
+        android:max="1"
+        android:paddingBottom="10dp"
+        android:progress="1"/>
 
     <TextView
         android:text="@string/firm_location_text"
@@ -12,7 +25,9 @@
         android:layout_height="wrap_content"
         android:textColor="@android:color/white"
         android:textSize="18sp"
-        android:labelFor="@+id/firm_location"/>
+        android:labelFor="@+id/firm_location"
+        android:paddingEnd="8dp"
+        android:paddingStart="8dp"/>
 
     <EditText
         android:layout_width="match_parent"
@@ -20,7 +35,9 @@
         android:text="@string/firm_location_default"
         android:ems="10"
         android:id="@+id/firm_location"
-        android:inputType="text"/>
+        android:inputType="text"
+        android:paddingEnd="8dp"
+        android:paddingStart="8dp"/>
 
     <TextView
         android:text="@string/util_location_text"
@@ -28,7 +45,9 @@
         android:layout_height="wrap_content"
         android:textColor="@android:color/white"
         android:textSize="18sp"
-        android:labelFor="@+id/util_location"/>
+        android:labelFor="@+id/util_location"
+        android:paddingEnd="8dp"
+        android:paddingStart="8dp"/>
 
     <EditText
         android:layout_width="match_parent"
@@ -36,5 +55,7 @@
         android:text="@string/util_location_default"
         android:ems="10"
         android:id="@+id/util_location"
-        android:inputType="text"/>
+        android:inputType="text"
+        android:paddingEnd="8dp"
+        android:paddingStart="8dp"/>
 </LinearLayout>
