--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -12,6 +12,14 @@
         <item>/su/bin</item>
         <item>/su/xbin (recommended)</item>
     </array>
-
+    <array name="planets_array">
+        <item>Airodump</item>
+        <item>MDK3</item>
+        <item>Crack WPA</item>
+        <item>Crack WEP</item>
+        <item>Reaver</item>
+        <item>Settings</item>
+        <item>Test</item>
+    </array>
 
 </resources>
