--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -106,7 +106,7 @@
               android:choiceMode="singleChoice"
               android:divider="@android:color/transparent"
               android:dividerHeight="0dp"
-              android:background="#111"
+              android:background="?attr/colorPrimary"
               android:paddingTop="200dp"
               android:listSelector="?attr/colorAccent" />
 </android.support.v4.widget.DrawerLayout>
