Create MDKFragment to use mdk3

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -15,9 +15,9 @@
     <array name="planets_array">
         <item>Airodump</item>
         <item>MDK3</item>
-        <item>Crack WPA</item>
-        <item>Crack WEP</item>
-        <item>Reaver</item>
+        <item>Crack WPA (not yet)</item>
+        <item>Crack WEP (not yet)</item>
+        <item>Reaver (not even close)</item>
         <item>Settings</item>
     </array>
 
