--- a/app/src/main/res/layout/mdk_fragment.xml
+++ b/app/src/main/res/layout/mdk_fragment.xml
@@ -9,11 +9,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/bf_switch"
-        android:padding="20dp"/>
+        android:padding="20dp"
+        android:textSize="16sp"
+        android:elevation="@android:dimen/thumbnail_height"/>
     <Switch
         android:text="@string/ados_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/ados_switch"
-        android:padding="20dp"/>
+        android:padding="20dp"
+        android:textSize="16sp"/>
 </LinearLayout>
