Create CrackFragment to crack .cap files and code optimization

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -15,8 +15,7 @@
     <array name="planets_array">
         <item>Airodump</item>
         <item>MDK3</item>
-        <item>Crack WPA (not yet)</item>
-        <item>Crack WEP (not yet)</item>
+        <item>Crack cap file (almost)</item>
         <item>Reaver (not even close)</item>
         <item>@string/settings</item>
     </array>
