Fixes, adjustments, cleanup, update version

--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -50,6 +50,11 @@
             android:dialogMessage="@string/aireplay_desc"
             android:dialogTitle="@string/aireplay_title" />
         <SwitchPreference
+            android:defaultValue="false"
+            android:title="@string/manuf_while_ados_title"
+            android:key="manuf_while_ados"
+            android:summary="@string/manuf_while_ados_sum"/>
+        <SwitchPreference
             android:defaultValue="@string/show_notif"
             android:title="@string/notif_title"
             android:key="show_notif"
