--- a/app/src/main/res/layout/crack_fragment.xml
+++ b/app/src/main/res/layout/crack_fragment.xml
@@ -5,7 +5,7 @@
               android:layout_height="match_parent"
               android:padding="5dp">
     <TextView
-        android:text="Path to .cap file"
+        android:text="@string/path_to_cap"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:labelFor="@+id/capfile"
@@ -21,7 +21,7 @@
         android:id="@+id/capfile"/>
 
     <TextView
-        android:text="Path to wordlist"
+        android:text="@string/path_to_wordlist"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:labelFor="@+id/wordlist"
@@ -60,7 +60,7 @@
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:id="@+id/console"
         android:background="@color/colorPrimary"
         android:textColor="?android:attr/textColorPrimary"
