--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -15,8 +15,8 @@
     <array name="planets_array">
         <item>Airodump</item>
         <item>MDK3</item>
-        <item>Crack cap file (almost)</item>
-        <item>Reaver (not even close)</item>
+        <item>Crack cap file</item>
+        <item>Reaver</item>
         <item>@string/settings</item>
     </array>
 
