--- a/app/src/main/res/layout/reaver_fragment.xml
+++ b/app/src/main/res/layout/reaver_fragment.xml
@@ -15,8 +15,7 @@
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        >
+        android:layout_height="wrap_content">
 
         <TextView
             android:text="PIN delay"
@@ -38,8 +37,7 @@
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        >
+        android:layout_height="wrap_content">
 
         <TextView
             android:text="Locked Delay"
