--- a/app/src/main/res/layout/mdk_fragment.xml
+++ b/app/src/main/res/layout/mdk_fragment.xml
@@ -2,21 +2,59 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_height="match_parent"
+              android:padding="5dp">
 
-    <Switch
-        android:text="@string/bf_title"
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/bf_switch"
-        android:padding="20dp"
-        android:textSize="16sp"
-        android:elevation="@android:dimen/thumbnail_height"/>
+        android:layout_margin="5dp"
+        android:background="?attr/colorPrimary">
+
+        <Switch
+            android:text="@string/bf_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/bf_switch"
+            android:padding="20dp"
+            android:textSize="16sp"
+            android:elevation="@android:dimen/thumbnail_height"/>
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:paddingEnd="20dp"
+            android:paddingStart="20dp"
+            >
+
+            <TextView
+                android:text="@string/ssid_file"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:textColor="?android:attr/textColorPrimary"
+                android:textSize="18sp"/>
+
+            <EditText
+                android:layout_height="wrap_content"
+                android:id="@+id/ssid_file"
+                android:inputType="text"
+                android:layout_width="200dp"
+                android:hint="/sdcard/list.txt"/>
+
+        </LinearLayout>
+
+    </LinearLayout>
+
     <Switch
         android:text="@string/ados_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/ados_switch"
         android:padding="20dp"
-        android:textSize="16sp"/>
+        android:textSize="16sp"
+        android:layout_margin="5dp"
+        android:background="?attr/colorPrimary"/>
 </LinearLayout>
