--- a/app/src/main/res/layout/test.xml
+++ b/app/src/main/res/layout/test.xml
@@ -15,7 +15,7 @@
         android:minHeight="5dp"
         android:minWidth="0dp"
         android:maxHeight="5dp"
-        android:max="4"/>
+        android:max="5"/>
 
     <LinearLayout
         android:orientation="vertical"
@@ -83,6 +83,26 @@
                 android:layout_height="match_parent"
                 app:srcCompat="@drawable/testing"
                 android:id="@+id/imageView3" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:text="Reaver"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:textColor="@android:color/white"
+                android:layout_weight="1"
+                android:padding="2dp" />
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                app:srcCompat="@drawable/testing"
+                android:id="@+id/imageView4" />
         </LinearLayout>
 
         <TextView
