--- a/app/src/main/res/layout/mdk_fragment.xml
+++ b/app/src/main/res/layout/mdk_fragment.xml
@@ -31,7 +31,7 @@
 
             <TextView
                 android:text="@string/ssid_file"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:textColor="?android:attr/textColorPrimary"
