--- a/app/src/main/res/layout/reaver_fragment.xml
+++ b/app/src/main/res/layout/reaver_fragment.xml
@@ -95,7 +95,8 @@
         android:layout_weight="1"
         android:scrollHorizontally="true"
         android:saveEnabled="true"
-        android:gravity="bottom"/>
+        android:gravity="bottom"
+        android:fontFamily="serif-monospace"/>
 
     <Button
         style="?android:attr/buttonBarButtonStyle"
