--- a/app/src/main/res/layout/custom_action_manager.xml
+++ b/app/src/main/res/layout/custom_action_manager.xml
@@ -4,4 +4,7 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 </LinearLayout>
