--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -17,7 +17,7 @@
         <item>MDK3</item>
         <item>Crack cap file</item>
         <item>Reaver</item>
-        <item>Custom Commands</item>
+        <item>Custom Actions</item>
         <item>@string/settings</item>
     </array>
 
