Add reaver option in CopySampleCommand

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -5,6 +5,8 @@
         <item>Airodump</item>
         <item>Aireplay</item>
         <item>MDK3</item>
+        <item>Reaver</item>
+        <item>Reaver in chroot</item>
     </array>
     <array name="install_locations">
         <item>/system/bin</item>
