Implement background thread to verify that tools are running, add more checks, changes in CrackFragment, update version

--- a/app/src/main/res/layout/crack_fragment.xml
+++ b/app/src/main/res/layout/crack_fragment.xml
@@ -34,7 +34,8 @@
         android:inputType="text"
         android:ems="10"
         android:id="@+id/wordlist"
-        android:hint="/sdcard/wordlist.txt"/>
+        android:hint="/sdcard/wordlist.txt"
+        android:text="/sdcard/wordlist.txt"/>
 
     <RadioGroup
         android:layout_width="match_parent"
