--- a/app/src/main/res/layout/mdk_fragment.xml
+++ b/app/src/main/res/layout/mdk_fragment.xml
@@ -24,6 +24,67 @@
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <CheckBox
+                android:text="@string/managed"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/managed"
+                android:layout_weight="1"
+                android:checked="true"/>
+
+            <CheckBox
+                android:text="@string/ad_hoc"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/adhoc"
+                android:layout_weight="1"
+                android:checked="true"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <CheckBox
+                android:text="OPN"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/opn"
+                android:layout_weight="1"
+                android:checked="true"/>
+
+            <CheckBox
+                android:text="WEP"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/wep"
+                android:layout_weight="1"
+                android:checked="true"/>
+
+            <CheckBox
+                android:text="TKIP"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/tkip"
+                android:layout_weight="1"
+                android:checked="true"/>
+
+            <CheckBox
+                android:text="AES"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/aes"
+                android:layout_weight="1"
+                android:checked="true"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:paddingEnd="20dp"
             android:paddingStart="20dp">
